# procxx

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: main.yml
example/: CMakeLists.txt  a.out  cl_clang.sh  cl_gcc.sh  example.cpp
include/procxx/: process.h
